--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.10.1",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.1.0",
+    "compression-webpack-plugin": "^4.0.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
@@ -36,12 +37,14 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.1.0",
+    "terser-webpack-plugin": "^3.0.6",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
-    "react-dev": "webpack -d --watch",
+    "start": "webpack -p --watch & nodemon server/index.js",
+    "react-dev": "webpack -p --watch",
     "server-dev": "nodemon server/index.js",
     "seed": "node database/seed.js",
     "start:dev": "webpack-dev-server --open",
@@ -52,7 +55,9 @@
     "url": "git+https://github.com/rebeccaquey/CheckoutMenu.git"
   },
   "jest": {
-    "setupFilesAfterEnv": ["jest-enzyme"],
+    "setupFilesAfterEnv": [
+      "jest-enzyme"
+    ],
     "testEnvironment": "enzyme"
   },
   "keywords": [],
